@@ -1,4 +1,9 @@
 2019-02-20  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/89412
+	* gcc.c-torture/compile/pr89412.c: New test.
+
+2019-02-20  Jakub Jelinek  <jakub@redhat.com>
 	    David Malcolm  <dmalcolm@redhat.com>
 
 	PR middle-end/89091
